pwd before npm start to show what the root file system really is --- Microsoft WSL docs warn of this

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "webpack serve",
+    "start": "pwd ; webpack serve",
     "watch": "webpack --watch --progress",
     "build": "webpack"
   },
